2011-05-24  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.12
	* check_updates: fixed the detection of RH 6 and Scientific Linux Systems
	                 (thanks to J. Oliveira)
	* check_updates: several style fixes (cleaned with Perl::Critic)

2010-11-18  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.11
	* check_updates: fixed the processing of Xen kernels

2010-11-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.10
	* check_updates.pod: updated the licensing information (GPL v3+)

2010-11-01  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.9
	* check_updates: removed the dependency on version.pm

2010-10-31  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.8
	* check_updates: fixed the license specification (GPL v3+)
	* AUTHORS: fixed a typo

2010-02-16  root  <matteo.corti@id.ethz.ch>

	* Version 1.4.7
	* check_updates: the output of yum check-updates can get wrapped -> check for double lines

2010-02-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: constants are now global because of embedded perl

2009-12-10  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.6 

2009-12-09  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Makefile.PL: man page being installed in the wrong section (3 instead of 1)
	* Makefile.PL: perl site vs vendor directories
	* check_updates.spec: removed the the %{?dist} macro from the changelog entries

2009-12-08  root  <matteo.corti@id.ethz.ch>

	* check_updates (check_up2date): fixed 'no updates' message on up2date based systems

2009-12-08  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Removed unnecessary dependence on List::MoreUtils, List::Util and Number::Format (fixed #55)

2009-12-07  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.4.4
	* check_updates (clean_kernel_version): fixed a bug with SMP kernels version cleanup
	* check_updates (clean_kernel_version): fixed a bug with PAE kernels version cleanup

2009-12-07  Matteo Corti  <matteo.corti@id.ethz.ch>
